--- a/index.html
+++ b/index.html
@@ -41,10 +41,15 @@ body {
 	transform: translate(-50%, -50%);
 }
 .title h1 {
-	font-size: 25vmin;
-	font-weight: 900;
-	font-family: "Montserrat", sans-serif;
-	color: black;
+	font-size: 11vmin;
+    font-weight: 900;
+    font-family: "Montserrat", sans-serif;
+    color: black;
+    width: 1200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .ghost {
